--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "node_modules/.bin/mocha"
   },
+  "repository": "git@github.com:jden/node-event-source-writer.git",
   "author": "jden <jason@denizac.org>",
   "license": "ISC",
   "devDependencies": {
