--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "event-source-writer",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "create a server-sent events (EventSource) compatible stream",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": "git@github.com:jden/node-event-source-writer.git",
   "author": "jden <jason@denizac.org>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "chai": "^1.9.1",
     "mocha": "^1.18.2"
